# ys

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pre-commit-autoupdate.yml
src/: branch_selection.rs  config.rs  main.rs  output.rs  yaml_parsing.rs
test/: complex.yml  json.yml  multidoc.yml  simple.yml  simple_with_json.yml
