[package]
name = "ys"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
range-collections = "0.2.4"
yaml-rust = "0.4"
termcolor = "1.1"

[dependencies.clap]
version = "3.2.17"
features = ["derive", "suggestions", "color", "wrap_help"]

[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "default-fancy"]
