[package]
name = "ys"
description = "ys (yaml-search) is a filter and formatting command line tool for yaml files."
license = "Apache-2.0"
repository = "https://github.com/chr1st1ank/ys"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
range-collections = "0.2.4"
termcolor = "1.1"
yaml-rust = "0.4"

[dependencies.clap]
version = "4.0.29"
features = ["derive", "suggestions", "color", "wrap_help"]

[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "default-fancy"]

[dev-dependencies]
indoc = "1.0"
pretty_assertions = "1.3"
